hphp/test/zend/good/Zend/tests/magic_by_ref_003.php.expectf

Fatal error: Method test::__get() cannot take arguments by reference in %s/magic_by_ref_003.php on line 4
